Completed Desktop EN.

--- a/public/css/base.scss
+++ b/public/css/base.scss
@@ -17,7 +17,7 @@ html, body {
 		url('/public/fonts/AkzidenzGroteskPro-BoldCn.ttf') format('truetype');
 }
 
-rl-mt-laundry-landing {
+rl-mt-dish-landing {
 	@import 'reset.scss';
 	@import 'variables.scss';
 	@import 'mixins.scss';
