--- a/public/css/components/_more-features.scss
+++ b/public/css/components/_more-features.scss
@@ -11,6 +11,10 @@ more-features {
             font-size: 2em;
             margin: 6px 0 15px 0;
         }
+
+        @media(max-width: $mobileBreakpoint) {
+        	font-size: 2em;
+        }
 	}
 
 	more-features-feature {
