--- a/public/css/components/_selector.scss
+++ b/public/css/components/_selector.scss
@@ -5,6 +5,11 @@ product-selector {
     transition: all 1s;
     margin-bottom: 60px !important;
     
+
+    @media(max-width: 667px) {
+        margin-bottom: 20px !important;
+    }
+
     h2{
         font-size: 3em;
         text-align: center;
@@ -370,6 +375,12 @@ product-selector-nav {
                 font-size: 1em;
                 line-height: 15px;
             }
+        }
+
+        @media screen and (max-width: 667px) {
+            width: 96.5%;
+            height: 100px;
+            margin: 6px 10px 0 6px;
         }
     }
 }
