Made changes according to copy deck

--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -24,4 +24,4 @@ $selectorBackgroundColor: #000000;
 $selectorSeeAllColor: #959595;
 $selectorCTAColor: $accentColor;
 
-$moreFeaturesBackgroundColor: #000000;
+$moreFeaturesBackgroundColor: #012b52;
