--- a/public/css/base.scss
+++ b/public/css/base.scss
@@ -33,6 +33,7 @@ rl-mt-dish-landing {
     @import 'components/more-features.scss';
     @import 'components/banner.scss';
     @import 'components/footer.scss';
+    @import 'components/legal.scss';
 
 	width: 100%;
 	@include Arial;
