--- a/public/css/components/_videoplayer.scss
+++ b/public/css/components/_videoplayer.scss
@@ -99,6 +99,7 @@ videoplayer-selector {
 		width: 100%;
 		top: 50%;
 		transform: translateY(-50%);
+		-webkit-transform: translateY(-50%);
 		z-index: 2;
 		position: absolute;
 
