Hide buying guide links

--- a/public/css/components/_features.scss
+++ b/public/css/components/_features.scss
@@ -2,6 +2,16 @@ $featureButtonHeight: 235px;
 $featureButtonHeightMobile: 220px;
 
 features {
+    //hide buying guide for now
+    .row feature-button:first-child {
+        display: none;
+    }
+
+    .row feature-button {
+        width: 50%;
+    }
+    //end hide buying guide for now
+
     h2{
         color: #002e5a !important;
         font-size: 3em;
