Added missing FR translations

--- a/public/css/components/_features.scss
+++ b/public/css/components/_features.scss
@@ -3,13 +3,13 @@ $featureButtonHeightMobile: 220px;
 
 features {
     //hide buying guide for now
-    .row feature-button:first-child {
-        display: none;
-    }
+    // .row feature-button:first-child {
+    //     display: none;
+    // }
 
-    .row feature-button {
-        width: 50%;
-    }
+    // .row feature-button {
+    //     width: 50%;
+    // }
     //end hide buying guide for now
 
     h2{
